fixed left spacing for glossary

--- a/assets/styles/glossary-styles.css
+++ b/assets/styles/glossary-styles.css
@@ -53,8 +53,9 @@ h2{
 }
 
 h3{
-    margin-left: calc(var(--left-margin) + 30px);
+    margin-left: calc(var(--left-margin) + 33px);
     margin-top: 10px;
+    color: var(--text-color);
 }
 
 p{
@@ -80,6 +81,14 @@ p{
         height: 22.5px;
         margin-top: -12px;
     }
+
+    h3{
+        margin-left: calc(var(--left-margin) + 38px);
+    }
+    
+    p{
+        margin-left: calc(var(--left-margin) + 38px);
+    }
 }
 
 @media (min-width: 1100px) {
@@ -89,12 +98,12 @@ p{
     }
 
     h3{
-        margin-left: 70px;
+        margin-left: 74px;
     }
 
     p{
         max-width: 45ch;
-        margin-left: 70px;
+        margin-left: 74px;
     }
 
     .bullet{
